<resources>
    <string name="show_login_screen">Авторизироваться</string>
    <string name="games">Игры</string>
    <string name="send_game_to_challenge">Вызов Брошен</string>
    <string name="reload_game">Сгенерировать новую игру</string>
    <string name="replay_game">Начать игру заново</string>
    <string name="complete_game">Завершенные игры</string>
    <string name="un_complete_game">Не завершенные игры</string>
    <string name="app_name">Судоку</string>
    <string name="new_game_menu">Новая Игра</string>
    <string name="load_game_menu">Загрузить игру</string>
    <string name="itemBack">назад</string>
    <string name="undefined">не найденно</string>
    <string name="time">Время:</string>
    <string name="enterNumber">Введите количество пробелов</string>
    <string name="save_text">Сохранить</string>
    <string name="new_game">Сохраниь и начать новую игру</string>
    <string name="complexity_grid">Сложность</string>
    <string name="level_hard">Сложно</string>
    <string name="level_medium">Нормально</string>
    <string name="level_easy">Легко</string>
    <string name="rating">Рейтинг</string>
    <string name="login">логин</string>
    <string name="password">пароль</string>
    <string name="auth">авторизация</string>
    <string name="delete">удалить</string>
    <string name="challenge">бросить вызов</string>
    <string name="error">Ошибка</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="settings">Настройки</string>
    <string name="mode_left_title">Режим Левши</string>
    <string name="mode_left_body">Разместить клавиатуру с левой стороны</string>
    <string name="show_same_answer_title">Существующие ответы</string>
    <string name="show_same_answer_body">Показывать существующие ответы</string>
    <string name="show_error_answer_title">Конфликты</string>
    <string name="show_error_answer_body">Пометка конфликтующих комбинаций</string>
    <string name="show_know_answer_title">Показывать известные цифры</string>
    <string name="show_know_answer_body">Показывать заранее известные  ответы(в строке и столбце)</string>
    <string name="show_count_number_body">Показывать количество уже установленных ответов</string>
    <string name="show_cout_number_title">Показывать число ответов</string>
    <string name="history_forward">Шаг вперед</string>
    <string name="history_back">Шаг назад</string>
    <string name="delete_answer">Удалить ответ</string>
    <string name="double_point">:</string>
    <string name="temp_time_minute">03</string>
    <string name="temp_time_second">02</string>
    <string name="local_challenge_game_time">Время за которое, вы прошли игру</string>
    <string name="challenge_game_time">Время за которое прошли игру</string>
</resources>
