<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.view.activity.MenuActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_for_title_bar"
        android:minHeight="?android:attr/actionBarSize"
        app:title="@string/app_name"
        app:titleTextColor="@color/colorWhite" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:background="@drawable/background_button"
            android:id="@+id/newGame"
            style="@style/menuItem"
            android:text="@string/new_game_menu" />

        <Button
            android:background="@drawable/background_button"
            android:id="@+id/restore"
            style="@style/menuItem"
            android:text="@string/load_game_menu" />

        <Button
            android:background="@drawable/background_button"
            android:id="@+id/rating"
            style="@style/menuItem"
            android:text="@string/rating" />

        <Button
            android:background="@drawable/background_button"
            android:id="@+id/open_setting"
            style="@style/menuItem"
            android:text="@string/title_activity_settings" />
    </LinearLayout>
</RelativeLayout>
