<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    tools:context=".mvp.view.activity.MenuActivity">

    <EditText
        android:id="@+id/login"
        style="@style/menuItem"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/password"
        style="@style/menuItem"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="80dp"
        android:text="@string/auth" />
</LinearLayout>
